Comment a DCHECK that fails temporarily

BUG=684292

Review-Url: https://codereview.chromium.org/2659523004
Cr-Commit-Position: refs/heads/master@{#446367}

Former-commit-id: cb1b5c8361a0758575517519d9914d8a74228997